results/SVCOMP/conversational/log-assert2-2024_03_08_14_14_21.txt
import java.util.Random;

class assert2 {
    //@ ensures \result >= 0;
    public static void main() {
        int i = new Random().nextInt();

        //@ assert i >= 0;
        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result >= 0;
                 ^
1 error

import java.util.Random;

class assert2 {
    //@ ensures i >= 0;
    public static void main() {
        int i = new Random().nextInt();

        //@ assert i >= 0;
        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:4: error: cannot find symbol
    //@ ensures i >= 0;
                ^
  symbol:   variable i
  location: class assert2
1 error

import java.util.Random;

class assert2 {
    //@ ensures \result >= 0;
    public static void main() {
        int i = new Random().nextInt();

        //@ assert i >= 0;
        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result >= 0;
                 ^
1 error

import java.util.Random;

class assert2 {
    //@ ensures i >= 0;
    public static void main() {
        int i = new Random().nextInt();

        //@ assert i >= 0;
        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:4: error: cannot find symbol
    //@ ensures i >= 0;
                ^
  symbol:   variable i
  location: class assert2
1 error

import java.util.Random;

class assert2 {
    //@ ensures \result >= 0;
    public static void main() {
        int i = new Random().nextInt();

        //@ assert i >= 0;
        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result >= 0;
                 ^
1 error

import java.util.Random;

class assert2 {
    //@ ensures \result >= 0;
    public static void main() {
        int i = new Random().nextInt();

        //@ assert i >= 0;
        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result >= 0;
                 ^
1 error

import java.util.Random;

class assert2 {
    //@ ensures i >= 0;
    public static void main() {
        int i = new Random().nextInt();

        //@ assert i >= 0;
        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:4: error: cannot find symbol
    //@ ensures i >= 0;
                ^
  symbol:   variable i
  location: class assert2
1 error

import java.util.Random;

class assert2 {
    //@ ensures \result >= 0;
    public static void main() {
        int i = new Random().nextInt();

        //@ assert i >= 0;
        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result >= 0;
                 ^
1 error

import java.util.Random;

class assert2 {
    //@ ensures i >= 0;
    public static void main() {
        int i = new Random().nextInt();

        //@ assert i >= 0;
        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:4: error: cannot find symbol
    //@ ensures i >= 0;
                ^
  symbol:   variable i
  location: class assert2
1 error

import java.util.Random;

class assert2 {
    //@ ensures \result >= 0;
    public static void main() {
        int i = new Random().nextInt();

        //@ assert i >= 0;
        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result >= 0;
                 ^
1 error

